tdf#104902 - Handle embedded newline in Calc's .uno:EnterString

Change-Id: I6377aebb06b6e6873ce61984a887d9e16eecd361
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/127766
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>